JiffleNowDev/src/objects/Jiffle_Event__c.object
<CustomObject>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Event UUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Jiffle_Event_Code__c</fullName>
        <label>Jiffle_Event_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jifflenow_Event_URL__c</fullName>
        <label>Jifflenow Event URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <label>Portfolio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Jiffle Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jiffle Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>